--- a/Mango.Services.CouponAPI/appsettings.json
+++ b/Mango.Services.CouponAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-TKFAPK9\\SQLEXPRESS; Database=Mango_Coupon; Trusted_Connection=True; TrustServerCertificate=True"
+  }
 }
