--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-TKFAPK9\\SQLEXPRESS; Database=Mango_Auth; Trusted_Connection=True; TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "fsdr5w345w34tsergs23rsergrthrthrsgas23rqqtre4",
+      "Issuer": "mango-auth-api",
+      "Audience": "mango-client"
+    }
   }
 }
